context menu for frequency bars

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -81,6 +81,13 @@
                 <div ui-view="histogram"></div>
             </footer>
         </div>
-
+        <div id="constext-menu-div" class="popupMenu" style="display: none;">
+            <ul>
+                <li>Edit Entity</li>
+                <li>Add as filter</li>
+                <li>Hide</li>
+                <li>Blacklist</li>
+            </ul>
+        </div>
     </body>
 </html>
