functionality for context menu

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -83,10 +83,10 @@
         </div>
         <div id="constext-menu-div" class="popupMenu" style="display: none;">
             <ul>
-                <li>Edit Entity</li>
-                <li>Add as filter</li>
-                <li>Hide</li>
-                <li>Blacklist</li>
+                <li action="edit">Edit Entity</li>
+                <li action="filter">Add as filter</li>
+                <li action="hide">Hide</li>
+                <li action="blacklist">Blacklist</li>
             </ul>
         </div>
     </body>
