--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -20,7 +20,7 @@
         <section layout="row">
             {{ doc.title }}
             <md-button class="md-icon-button" ng-click="removeTab(doc)" aria-label="close" style="padding-top: 0px;">
-                <ng-md-icon size="20" icon="close"></ng-md-icon>
+                <md-icon class="material-icons">clear</md-icon>
             </md-button>
         </section>
     </md-tab-label>
