--- a/public/partials/editNode.html
+++ b/public/partials/editNode.html
@@ -22,7 +22,7 @@
                 <h2>Edit node {{ title }}</h2>
                 <span flex></span>
                 <md-button class="md-icon-button" ng-click="closeClick()">
-                    <md-icon md-font-icon="fa fa-times" aria-label="Close dialog"></md-icon>
+                    <md-icon class="material-icons" aria-label="Close dialog">clear</md-icon>
                 </md-button>
             </div>
         </md-toolbar>
