--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -31,24 +31,24 @@
     </md-input-container>
 
     <md-button class="md-raised md-small" ng-click="showSettings()" aria-label="Settings">
-      <md-icon md-font-icon="fa fa-cog fa-2x"></md-icon>
+      <md-icon class="material-icons">settings</md-icon>
     </md-button>
 
     <md-button class="md-raised md-small" aria-label="Fullscreen" ngsf-toggle-fullscreen>
       <md-tooltip show-if-fullscreen=false> Enter Fullscreen </md-tooltip>
       <md-tooltip show-if-fullscreen=true> Exit Fullscreen </md-tooltip>
-      <md-icon md-font-icon="fa fa-desktop fa-2x" show-if-fullscreen=false></md-icon>
-      <md-icon md-font-icon="fa fa-times fa-2x" show-if-fullscreen=true></md-icon>
+      <md-icon class="material-icons" show-if-fullscreen=false>settings_overscan</md-icon>
+      <md-icon class="material-icons" show-if-fullscreen=true>aspect_ratio</md-icon>
     </md-button>
 
     <md-button class="md-raised md-small" ng-href="http://newsleak.io/projekt/" target="_blank" aria-label="Blog">
       <md-tooltip> More informations about new/s/leak </md-tooltip>
-      <md-icon md-font-icon="fa fa-info fa-2x"></md-icon>
+      <md-icon class="material-icons">info_outline</md-icon>
     </md-button>
 
     <md-button class="md-raised md-small" ng-href="./assets/VIPvideo.mp4" target="_blank" aria-label="Video">
       <md-tooltip> Help </md-tooltip>
-      <md-icon md-font-icon="fa fa-question fa-2x"></md-icon>
+      <md-icon class="material-icons">help_outline</md-icon>
     </md-button>
 
     <span flex></span>
