--- a/public/partials/settings.html
+++ b/public/partials/settings.html
@@ -21,6 +21,7 @@
                 <h2>Settings</h2>
                 <span flex></span>
                 <md-button class="md-icon-button" ng-click="closeClick()">
+                    <md-icon class="material-icons" aria-label="Close dialog">clear</md-icon>
                     <md-icon md-font-icon="fa fa-times" aria-label="Close dialog"></md-icon>
                 </md-button>
             </div>
