Add document occurrence to edge tooltip

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -20,10 +20,11 @@
     RESET
     ======================================
 */
-* {
+/** {
     margin: 0;
     padding: 0;
-}
+}*/
+
 html, body {
     height: 100%;
     width: 100%;
