--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -56,9 +56,11 @@ html, body {
 */
 
 
-line {
-    /* Should be the same as edgeLegend#fill */
-    stroke: #b0b0b0;
+#network {
+    position: absolute;
+    overflow-y: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 #mynetwork {
@@ -68,6 +70,15 @@ line {
     top: 74px;
     height: calc(100% - 74px);
     background-color: #d1d1d1;
+}
+
+#legend {
+    position: absolute;
+    width: 200px;
+    height: 60px;
+    top: 74px;
+    left: 10px;
+    z-index: 10;
 }
 
 .vis-network .vis-navigation .vis-button {
@@ -169,11 +180,6 @@ div.popupMenu ul li {
 div.popupMenu ul li:hover {
     background-color: #4677f8;
     color: #fefefe;
-}
-
-#network-legend {
-    width: 200px;
-    height: 60px;
 }
 
 
