--- a/public/partials/network.html
+++ b/public/partials/network.html
@@ -32,22 +32,29 @@
     </h1>
     id: {{sNode.id}}<br>
     occurs in <span class="tooltipImportantText"> {{sNode.freq}} </span> documents
-    <div ng-if="!sNode.isFocusNode">
-        <button type="button" class="btn btn-primary btn-small" ng-click="setFocusNode(sNode.id)">
-            <i class="material-icons">adjust</i> Set to focus
-        </button>
-        <span ng-if="sNode.relEdges.length !== 0">
-            <br> to see these Nodes:
-            <p ng-repeat="edge in sNode.relEdges">
-                <i class="material-icons"> {{categories[edge.type].img}}</i>{{edge.name}}
-            </p>
-        </span>
+    <div ng-if="contextCache[sNode.id].data !== undefined">
+        <div ng-if="!sNode.isFocusNode">
+            <button type="button" class="btn btn-primary btn-small" ng-click="setFocusNode(sNode.id)">
+                <i class="material-icons">adjust</i> Set to focus
+            </button>
+            <span ng-if="sNode.relEdges.length !== 0">
+                <br> to see these Nodes:
+                <p ng-repeat="node in contextCache[sNode.id].data.guidance">
+                    <i class="material-icons"> {{categories[node.type].img}}</i>{{node.name}}
+                </p>
+            </span>
+        </div>
+        <button type="button" class="btn btn-primary btn-small" ng-click="expandNode(sNode.id)">
+            <i class="material-icons">add</i> Expand Node
+        </button><br>
+        to see additionally the n most important connections to {{sNode.name}}:
+        <p ng-if="contextCache[sNode.id].data !== undefined" ng-repeat="node in contextCache[sNode.id].data.expand.tooltipInfo">
+            <i class="material-icons"> {{categories[node.type].img}}</i>{{node.name}}
+        </p>
     </div>
-    <button type="button" class="btn btn-primary btn-small" ng-click="expandNode(sNode.id)">
-        <i class="material-icons">add</i> Expand Node
-    </button><br>
-    to see additionally the n most important connections to {{sNode.name}}:
-    <p ng-if="addEdgesCache[sNode.id] !== undefined" ng-repeat="node in addEdgesCache[sNode.id].tooltipInfo">
-        <i class="material-icons"> {{categories[node.type].img}}</i>{{node.name}}
-    </p>
+    <div ng-if="contextCache[sNode.id].data === undefined">
+        <br>
+        loading more information...
+        <br>
+    </div>
 </div>
