--- a/public/partials/settings.html
+++ b/public/partials/settings.html
@@ -26,34 +26,34 @@
             </div>
         </md-toolbar>
 
-        <md-dialog-content>
+        <md-dialog-content style="overflow-y: hidden;">
             <md-tabs md-dynamic-height md-border-bottom>
                 <md-tab label="blacklist">
                     <md-content class="md-padding">
                         <md-list>
-                            <md-list-item layout="row">
-                                <p class="md-body-2"> Id</p>
-                                <p class="md-body-2"> Name </p>
-                                <p class="md-body-2"> Type </p>
-                            </md-list-item>
+                            <md-virtual-repeat-container style="height: 500px;">
+                                <md-list-item layout="row">
+                                    <p class="md-body-2"> Id</p>
+                                    <p class="md-body-2"> Name </p>
+                                    <p class="md-body-2"> Type </p>
+                                </md-list-item>
 
-                            <md-list-item ng-repeat="e in blacklisted | orderBy: 'name'" ng-click="toggle(e)">
-                                <p> {{ e.id }} </p>
-                                <p> {{ e.name }} </p>
-                                <p> {{ e.type }} </p>
-                                <md-checkbox class="md-secondary" ng-click="toggle(e)" ng-checked="exists(e, selected)" aria-label="remove-item"></md-checkbox>
-                            </md-list-item>
+                                <md-list-item md-virtual-repeat="e in blacklisted | orderBy: 'name'"  md-item-size="10" ng-click="toggle(e)">
+                                    <p> {{ e.id }} </p>
+                                    <p> {{ e.name }} </p>
+                                    <p> {{ e.type }} </p>
+                                    <md-checkbox class="md-secondary" ng-click="toggle(e)" ng-checked="exists(e, selected)" aria-label="remove-item"></md-checkbox>
+                                </md-list-item>
+                            </md-virtual-repeat-container>
                         </md-list>
                         <md-divider></md-divider>
-                        <p>
-                            <md-button class="md-primary md-raised" ng-click="removeItems()">Remove</md-button>
-                        </p>
                     </md-content>
                 </md-tab>
             </md-tabs>
         </md-dialog-content>
 
         <md-dialog-actions layout="row">
+            <md-button class="md-primary md-raised" ng-click="removeItems()">Remove</md-button>
             <span flex></span>
             <md-button class="md-primary md-raised" ng-click="closeClick()">Close</md-button>
         </md-dialog-actions>
