--- a/public/partials/tools.html
+++ b/public/partials/tools.html
@@ -141,7 +141,7 @@
           </div>
         </div>
         <div class="btn-group">
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Settings</button>
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo" ng-click="updateGuidance()" id="settings-button">Settings</button>
         </div>
 
         <div class="btn-group">
