Make node merge persisent

--- a/public/partials/settings.html
+++ b/public/partials/settings.html
@@ -49,6 +49,10 @@
                         <md-divider></md-divider>
                     </md-content>
                 </md-tab>
+
+                <md-tab label="mergelist">
+                    <md-content class="md-padding">
+                    </md-content>
             </md-tabs>
         </md-dialog-content>
 
