Guidance benutzt nun History/ History enthält nun 2 neue Guidance-Events

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -692,6 +692,11 @@ ul#historyList {
     background-color: #2759AC;
 }
 
+#historyList .material-icons {
+    vertical-align: top;
+    font-size: 20px;
+}
+
 /*
     ======================================
     Generic
