--- a/public/partials/settings.html
+++ b/public/partials/settings.html
@@ -38,11 +38,11 @@
                             </md-list-item>
                             <md-virtual-repeat-container style="height: 500px;">
 
-                                <md-list-item md-virtual-repeat="e in blacklisted | orderBy: 'name'"  md-item-size="10" ng-click="toggle(e)">
+                                <md-list-item md-virtual-repeat="e in blacklist | orderBy: 'name'"  md-item-size="10" ng-click="toggle(e, blacklistSelection)">
                                     <p> {{ e.id }} </p>
                                     <p> {{ e.name }} </p>
                                     <p> {{ e.type }} </p>
-                                    <md-checkbox class="md-secondary" ng-click="toggle(e)" ng-checked="exists(e, selected)" aria-label="remove-item"></md-checkbox>
+                                    <md-checkbox class="md-secondary" ng-click="toggle(e, blacklistSelection)" ng-checked="exists(e, blacklistSelection)" aria-label="remove-item"></md-checkbox>
                                 </md-list-item>
                             </md-virtual-repeat-container>
                         </md-list>
@@ -52,12 +52,28 @@
 
                 <md-tab label="mergelist">
                     <md-content class="md-padding">
+                        <md-list>
+                            <md-list-item layout="row">
+                                <p class="md-body-2"> Origin</p>
+                                <p class="md-body-2"> Duplicates</p>
+                            </md-list-item>
+                            <md-virtual-repeat-container style="height: 500px;">
+
+                                <md-list-item md-virtual-repeat="e in blacklist | orderBy: 'name'"  md-item-size="10" ng-click="toggle(e, blacklistSelection)">
+                                    <p> {{ e.id }} </p>
+                                    <p> {{ e.name }} </p>
+                                    <md-checkbox class="md-secondary" ng-click="toggle(e, blacklistSelection)" ng-checked="exists(e, blacklistSelection)" aria-label="remove-item"></md-checkbox>
+                                </md-list-item>
+                            </md-virtual-repeat-container>
+                        </md-list>
+                        <md-divider></md-divider>
                     </md-content>
+                </md-tab>
             </md-tabs>
         </md-dialog-content>
 
         <md-dialog-actions layout="row">
-            <md-button class="md-primary md-raised" ng-click="removeItems()">Remove</md-button>
+            <md-button class="md-primary md-raised" ng-click="removeFromBlacklist()">Remove</md-button>
             <span flex></span>
             <md-button class="md-primary md-raised" ng-click="closeClick()">Close</md-button>
         </md-dialog-actions>
