--- a/public/partials/settings.html
+++ b/public/partials/settings.html
@@ -28,7 +28,7 @@
 
         <md-dialog-content style="overflow-y: hidden;">
             <md-tabs md-dynamic-height md-border-bottom>
-                <md-tab label="blacklist">
+                <md-tab label="blacklist" md-on-select="isBlacklist = !isBlacklist">
                     <md-content class="md-padding">
                         <md-list>
                             <md-list-item layout="row">
@@ -50,7 +50,7 @@
                     </md-content>
                 </md-tab>
 
-                <md-tab label="mergelist">
+                <md-tab label="mergelist" md-on-select="isBlacklist = !isBlacklist">
                     <md-content class="md-padding">
                         <md-list>
                             <md-list-item layout="row">
@@ -59,10 +59,10 @@
                             </md-list-item>
                             <md-virtual-repeat-container style="height: 500px;">
 
-                                <md-list-item md-virtual-repeat="e in blacklist | orderBy: 'name'"  md-item-size="10" ng-click="toggle(e, blacklistSelection)">
-                                    <p> {{ e.id }} </p>
-                                    <p> {{ e.name }} </p>
-                                    <md-checkbox class="md-secondary" ng-click="toggle(e, blacklistSelection)" ng-checked="exists(e, blacklistSelection)" aria-label="remove-item"></md-checkbox>
+                                <md-list-item md-virtual-repeat="e in mergelist | orderBy: 'name'"  md-item-size="10" ng-click="toggle(e, mergelistSelection)">
+                                    <p> {{ e.origin.name }} </p>
+                                    <p>{{ joinDuplicates(e.duplicates) }} </p >
+                                    <md-checkbox class="md-secondary" ng-click="toggle(e, mergelistSelection)" ng-checked="exists(e, mergelistSelection)" aria-label="remove-item"></md-checkbox>
                                 </md-list-item>
                             </md-virtual-repeat-container>
                         </md-list>
@@ -73,7 +73,7 @@
         </md-dialog-content>
 
         <md-dialog-actions layout="row">
-            <md-button class="md-primary md-raised" ng-click="removeFromBlacklist()">Remove</md-button>
+            <md-button class="md-primary md-raised" ng-click="isBlacklist ? removeFromBlacklist() : removeFromMergelist()">Remove</md-button>
             <span flex></span>
             <md-button class="md-primary md-raised" ng-click="closeClick()">Close</md-button>
         </md-dialog-actions>
