submit fulltext search with enter

--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -16,7 +16,7 @@
   -->
 
 <div style="padding: 10px;">
-	<form layout layout-align="center">
+	<form layout layout-align="center" ng-submit="addFulltext(fulltextInput)">
 		<div layout="row" flex>
 			<md-input-container flex class="md-icon-float md-block md-title">
 				<label>Search for...</label>
