--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -18,12 +18,12 @@
 <div style="padding: 10px;">
 	<form layout layout-align="center" ng-submit="addFulltext(fulltextInput)">
 		<div layout="row" flex>
-			<md-input-container flex class="md-icon-float md-block md-title">
+			<md-input-container flex class="md-block">
 				<label>Search for...</label>
 				<input type="text" ng-model="fulltextInput">
 			</md-input-container>
 			<div>
-				<md-button class="md-raised md-primary" ng-click="addFulltext(fulltextInput)">
+				<md-button class="md-raised md-primary" type="submit">
 					<md-icon class="material-icons">search</md-icon>
 				</md-button>
 			</div>
