--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -26,7 +26,7 @@
     </md-tab-label>
 
     <md-tab-body>
-        <md-content flex layout-padding ng-init="content = renderDoc(doc); keywords = retrieveKeywords(doc)">
+        <md-content flex layout-padding ng-init="renderDoc(doc); keywords = retrieveKeywords(doc)">
             <md-card>
                 <md-card-title>
                     <md-card-title-text>
@@ -63,7 +63,7 @@
                 <md-card-content>
                 </md-card-content>
             </md-card>
-            <div ng-bind-html="content"></div>
+            <div id="document-content"></div>
         </md-content>
     </md-tab-body>
 </md-tab>
