Add directive to render document

--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -26,7 +26,8 @@
     </md-tab-label>
 
     <md-tab-body>
-        <md-content flex layout-padding ng-init="renderDoc(doc); keywords = retrieveKeywords(doc)">
+        <!--<md-content flex layout-padding ng-init="renderDoc(doc); keywords = retrieveKeywords(doc)">-->
+        <md-content flex layout-padding ng-init="keywords = retrieveKeywords(doc)">
             <md-card>
                 <md-card-title>
                     <md-card-title-text>
@@ -63,7 +64,9 @@
                 <md-card-content>
                 </md-card-content>
             </md-card>
-            <div id="document-content"></div>
+            <!--<div id="document-content"></div>-->
+            <doc-content content="{{ doc.content }}" entities="doc.entities"></doc-content>
+
         </md-content>
     </md-tab-body>
 </md-tab>
