--- a/public/partials/expandNode.html
+++ b/public/partials/expandNode.html
@@ -15,11 +15,11 @@
   ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<md-dialog aria-label="expand" flex="25" ng-cloak>
+<md-dialog aria-label="expand" flex="25">
     <form>
         <md-toolbar>
             <div class="md-toolbar-tools">
-                <h2>Expand node {{ title }}</h2>
+                <h2>Expand Node: {{ title }}</h2>
                 <span flex></span>
                 <md-button class="md-icon-button" ng-click="closeClick()">
                     <md-icon class="material-icons" aria-label="Close dialog">clear</md-icon>
@@ -28,23 +28,40 @@
         </md-toolbar>
         <md-dialog-content>
                 <md-content layout-padding layout="column">
-                    <h3 class="md-title">Neighbors</h3>
-                    <md-input-container class="md-block" flex-gt-sm>
-                        <label>Filter</label>
-                        <input ng-model="filter">
-                    </md-input-container>
-                    <md-list ng-cloak>
-                        <md-list-item class="list-header" layout="row">
-                                <span ng-repeat="c in columns"
-                                      ng-style="{width: 100/columns.length + '%'}">{{c}}</span>
-                        </md-list-item>
-                        <divider></divider>
-                        <md-list-item ng-repeat="n in neighbors">
-                            <p> {{ n.label }} </p>
-                            <p> {{ n.type }} </p>
-                            <md-checkbox class="md-secondary" aria-label="add-node"></md-checkbox>
-                        </md-list-item>
+                    <div layout="row">
+                        <md-input-container class="md-block" flex-gt-sm>
+                            <label>Filter by name</label>
+                            <input ng-model="query">
+                        </md-input-container>
+
+                        <md-input-container>
+                            <label>Sort By</label>
+                            <md-select ng-model="orderList" ng-selected="$index == 4">
+                                <md-option value="label"><em>Name</em></md-option>
+                                <md-option value="id"><em>Id</em></md-option>
+                                <md-option value="type"><em>Type</em></md-option>
+                                <md-option value="-freq"><em>Freq Decreasing</em></md-option>
+                                <md-option value="freq"><em>Freq Increasing</em></md-option>
+                            </md-select>
+                        </md-input-container>
+                    </div>
+                    <md-list>
+                        <!--<md-list-item md-item-size="10" layout="row">
+                            <span ng-style="{ width: '10%'}"> Id </span>
+                            <span ng-style="{ width: '30%'}"> Name </span>
+                            <span ng-style="{ width: '30%'}"> Type </span>
+                        </md-list-item>-->
+                        <md-virtual-repeat-container ng-style="{ height: (neighbors.length * 48) + 'px'}">
+                            <md-list-item layout="row" md-virtual-repeat="n in neighbors | filter: query | orderBy: orderList"  md-item-size="10" ng-click="toggle(n, selection)">
+                                <p ng-style="{ width: '10%'}"> {{ n.id }} </p>
+                                <p ng-style="{ width: '30%'}"> {{ n.label }} </p>
+                                <p ng-style="{ width: '30%'}"> {{ n.type }} </p>
+                                <md-checkbox class="md-secondary" ng-style="{ width: '30%'}" ng-click="toggle(n, selection)" ng-checked="exists(n, selection)" aria-label="remove-item"></md-checkbox>
+                            </md-list-item>
+                        </md-virtual-repeat-container>
                     </md-list>
+                    <md-divider></md-divider>
+                    <span>Number of neighbors: {{ neighbors.length }}</span>
                 </md-content>
         </md-dialog-content>
 
