--- a/public/partials/settings.html
+++ b/public/partials/settings.html
@@ -15,7 +15,7 @@
   ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<md-dialog aria-label="Settings" flex="40" ng-cloak>
+<md-dialog aria-label="Settings" flex="40">
         <md-toolbar>
             <div class="md-toolbar-tools">
                 <h2>Settings</h2>
